src/providers/Inspector/style.module.scss
.save-box > button {
	flex: 1;
}

.tabs, .tabs > :global(.mantine-Tabs-panel) {
	flex: 1;
	display: flex;
	flex-direction: column;
	gap: 12px;
}

.tabs :global(.mantine-Tabs-tab[data-active]) {
	background: var(--surrealist-gradient);
}

.record-input {
	font-family: "JetBrains Mono";
	font-size: 14px;
	height: 42px;
}

